# drone-rl-llm-curriculum

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Drone_RL_LLM_Curriculum.ipynb  FINAL_CLEANUP_PLAN.md  LICENSE  PROJECT_BRIEF.md  README.md  pyproject.toml
.github/workflows/: quality-report.yml
configs/curricula/: curriculum_directrpm_dynprev_m-taskdist_medium.yaml  curriculum_llm_local_directrpm_dynprev_taskdist_medium_medium.yaml  curriculum_llm_local_pid_dynprev_taskdist_medium_medium.yaml  curriculum_llm_local_smoke.yaml  curriculum_llm_smoke.yaml  curriculum_manual_directrpm_dynprev_taskdist_medium_medium.yaml  curriculum_manual_line_final.yaml  curriculum_manual_line_medium.yaml  curriculum_manual_line_smoke.yaml  curriculum_manual_pid_dynprev_taskdist_medium_medium.yaml  curriculum_pid_dynprev_m-taskdist_medium.yaml  llm_curriculum_directrpm_dynprev_m-taskdist_medium.yaml  llm_curriculum_pid_dynprev_m-taskdist_medium.yaml  manual_line_curriculum.yaml  manual_line_curriculum_100k.yaml
configs/evaluation/: curriculum_benchmarks.yaml  evaluation_task_suite_broad.yaml  evaluation_task_suite_variation.yaml  final_benchmark_eval_suite.yaml  generalization_eval_suite.yaml  line_eval_suite.yaml  scenario_task_catalog.yaml
configs/scenarios/: scripted_reference_circle_polyline.yaml  scripted_reference_line_polyline.yaml  showcase_hover_line_polyline.yaml
configs/smoke/: ppo_hover_smoke.yaml  ppo_tracking_smoke.yaml  training_smoke.yaml  trajectory_validation.yaml
configs/tasks/: task_distribution_angled_vertical_bootstrap_medium.yaml  task_distribution_basic_training_show.yaml  task_distribution_circle_bootstrap_medium.yaml  task_distribution_delayed_altitude_polyline_bootstrap_medium.yaml  task_distribution_ellipse_bootstrap_medium.yaml  task_distribution_hover_bootstrap_medium.yaml  task_distribution_hover_small.yaml  task_distribution_line_small.yaml  task_distribution_multi_height_polyline_bootstrap_medium.yaml  task_distribution_polyline_bootstrap_medium.yaml  task_distribution_rectangle_bootstrap_medium.yaml  task_distribution_short_line_bootstrap_medium.yaml  task_distribution_tracking_broad.yaml  task_distribution_tracking_medium.yaml  task_distribution_tracking_small.yaml  task_distribution_triangle_bootstrap_medium.yaml  task_distribution_vertical_bootstrap_medium.yaml  task_distribution_vertical_up_down_bootstrap_medium.yaml  task_distribution_zigzag_bootstrap_medium.yaml
configs/training/: ppo_tracking.yaml  ppo_tracking_direct_rpm_smoke.yaml  ppo_tracking_directrpm_dynprev_basic_show.yaml  ppo_tracking_directrpm_dynprev_m-taskdist_medium.yaml  ppo_tracking_directrpm_dynprev_m-taskdist_medium_clip010.yaml  ppo_tracking_directrpm_dynprev_m-taskdist_medium_ent005.yaml  ppo_tracking_directrpm_dynprev_m-taskdist_medium_gamma095.yaml  ppo_tracking_directrpm_dynprev_m-taskdist_medium_low_lr.yaml  ppo_tracking_directrpm_dynprev_m-taskdist_medium_targetkl015.yaml  ppo_tracking_directrpm_dynprev_medium.yaml  ppo_tracking_directrpm_dynprev_net128_m-taskdist_medium.yaml  ppo_tracking_directrpm_dynprev_net128_taskdist_medium_medium.yaml  ppo_tracking_directrpm_dynprev_net256_m-taskdist_medium.yaml  ppo_tracking_directrpm_dynprev_net512_large_m-taskdist_medium.yaml  ppo_tracking_directrpm_dynprev_taskdist_medium_ent005_medium.yaml  ppo_tracking_directrpm_dynprev_taskdist_medium_low_lr_medium.yaml  ppo_tracking_directrpm_dynprev_taskdist_medium_medium.yaml  (+32 more)
scripts/: _docker_run.sh  docker_build.sh  docker_dev.sh  docker_job.sh  evaluate_variation_suite.sh  experiment_matrix.sh  experiment_runner_common.sh  render_run_gifs.sh  run_lane_1.sh  run_lane_2.sh  run_lane_3.sh  run_lane_4.sh  run_lane_5.sh  run_lane_6.sh
src/: __init__.py
tests/: test_cli_mvp.py  test_envs_smoke.py  test_envs_task_adapter.py  test_envs_task_distribution.py  test_envs_tracking_env.py  test_envs_tracking_reward.py  test_evaluation_diagnostics.py  test_evaluation_plots.py  test_evaluation_report.py  test_evaluation_rollout.py  test_evaluation_trajectory_metrics.py  test_experiments_config.py  test_experiments_curriculum.py  test_experiments_curriculum_evaluation.py  test_experiments_curriculum_training.py  test_experiments_evaluation_suites.py  test_experiments_llm_curriculum_training.py  test_experiments_package_structure.py  test_experiments_policy_evaluation.py  test_experiments_policy_render.py  test_experiments_ppo_config.py  test_experiments_ppo_tracking.py  test_experiments_render_smoke.py  test_experiments_scenario_render.py  test_experiments_training_smoke.py  test_llm_client.py  test_llm_curriculum_pipeline.py  test_llm_json.py  test_llm_task_schema.py  test_overnight_medium_matrix.py  test_reevaluate_scenarios_script.py  test_trajectories_primitives.py  test_utils_artifacts.py  test_utils_paths.py  test_utils_serialization.py  test_utils_wandb.py  test_validation_contracts.py  test_validation_tasks.py
(+100 files in other folders)
